--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -89,7 +89,7 @@ h6 {
   .linktree {
 	  width: 120px;
 	  height: 120px;
-	  background-image: url("https://avatars.githubusercontent.com/u/106186354?v=4");
+	  background-image: url("https://avatars.githubusercontent.com/u/48664967?s=400&u=aea71014d841336486e01a1aab3a8d39d15cf9df&v=4");
 	  background-size: cover;
 	  background-repeat: no-repeat;
 	  background-position: 50% 50%;
